# autonovel

./: $null  .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMMERCIALIZATION_FEASIBILITY.md  COMMERCIAL_PIPELINE_72STEP_PLAN.md  COMMIT_SUMMARY.md  DETAILED_36_STEP_IMPLEMENTATION_PLAN.md  DETAILED_72_STEP_IMPLEMENTATION_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN_V3.md  IMPLEMENTATION_PLAN_V4.md  IMPLEMENTATION_PLAN_task_id_uuid.md  IMPROVEMENT_PROPOSALS.md  PHASE_C_D_WORKLOG.md  PdfExporter.gs  README.md  REFACTORING_PLAN.md  REFACTORING_REMAINING_TASKS.md  REFACTORING_STATUS.md  WORK_ANALYSIS_REPORT.md  WORK_PRODUCTION_REPORT.md  _test_output.txt  alembic.ini  api_frag_map.md  app.py  background.py  balance_verify_result.json  config.py  database.py  docker-compose.ci.yml  docker-compose.yml  engine.py  engine_agents.py  engine_context.py  engine_critique.py  engine_narrative.py  engine_prompts.py  (+71 more)
.streamlit/: secrets.toml.template
assets/: style.css
config/: __init__.py  archetypes.py  archetypes_ascii.py  archetypes_fixed.py  archetypes_min.py  archetypes_new.py  archetypes_stub.py  archetypes_test.py  ascii_test.py  base.py  constants.py  container.py  cors_config.py  domain_profile_manager.py  emotional_hook_vocabulary.py  erotic_direct_mappings.py  erotic_pacing.py  erotic_parameters.py  erotic_platform_presets.py  erotic_thresholds.py  erotic_video_patterns.py  erotic_vocabulary.py  erotic_vocabulary.py.backup  erotic_vocabulary_ext.py  file_watcher.py  interaction_matrix.yaml  logging_config.py  models.py  models.yaml  narrative.py  (+11 more)
(+1109 files in other folders)
