[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"] # Pyflakes, Pycodestyle, Isort, Complexity
ignore = ["E501"] # Line too long (handled by formatter/line-length)

[tool.ruff.lint.mccabe]
max-complexity = 15

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaku-hegemony"
version = "3.0.0"
description = "覇権小説エンジン"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "schemas*", "services*", "prompts*", "formatters*", "models*", "plugins*", "kernels*"]
